viết unit test và cải thiện điểm security rating